--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,6 @@ body {
 }
 .hi-slide {
   position: relative;
- 
   margin: 50px auto 0;
   margin-bottom: 180px;
 }
@@ -34,12 +33,11 @@ body {
   /* border: 3px solid #fff; */
   /* background-color: #333; */
   /* --bggradient: linear-gradient(to bottom, #dd2476, #ff512f); */
-
   cursor: pointer;
 }
 
 .hi-slide > ul > li > img {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   background-position: center;
 }
@@ -302,28 +300,7 @@ header .container .col-md-7 p {
 @media screen and (max-width: 980px) {
   #two {
     padding: 4em 0 2em 0;
-    background: -moz-linear-gradient(
-      top,
-      #f3f3f3 0%,
-      #f3f3f3 50%,
-      #f7f7f7 0%,
-      #f7f7f7 100%
-    );
-    background: -webkit-linear-gradient(
-      top,
-      #f3f3f3 0%,
-      #f3f3f3 50%,
-      #f7f7f7 0%,
-      #f7f7f7 100%
-    );
-    background: linear-gradient(
-      to bottom,
-      #f76f61 0%,
-      #fd5195 50%,
-      #f77062 0%,
-      #fe5196 100%
-    );
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#f7f7f7',GradientType=0 );
+    
   }
 
   #two .inner {
