--- a/views/greeting.edge
+++ b/views/greeting.edge
@@ -7,24 +7,26 @@
     <meta name="description" content="">
     <meta name="author" content="">
   
-    <title> MeelIndia Greeting : {{ greetings[0].title   }} : {{ greetings[0].subtitle }} </title>
-    
+    <title> MeelIndia Invitation | {{ greetings[0].title   }}  </title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
-	<script src= "https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"> 
-    </script>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./dist/html2canvas.js"></script>
     <script>
         function doCapture(){
             html2canvas(document.getElementById("inviteBody")).then(function (canvas){
-                //console.log(canvas.toDataURL("image/jpeg",0.9));
+                console.log(canvas.toDataURL("image/jpeg",0.9));
                 image = canvas.toDataURL("image/jpeg",0.9);
                 var link = document.createElement('a');
                 link.download = "greeting.png";
@@ -41,110 +43,176 @@
     @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
 
-        body{
-            background:#E5E5E5;
-            overflow-x: hidden;
-        }
-        input{
-            font-family: 'play', cursive;
-        }
-        .invite{
-            min-height: 550px;
-            width: 350px;
-            margin:auto;
-            padding-bottom: 20px;
-            background: cover;
-            font-family: 'Caveat', cursive;
-        }   
-        .Caveat{
-            font-family: 'Caveat', cursive;
-        }
-        #bgInvite{
-            width: 350px;
-            padding: 0;
-            margin-top: 0;
-        }
-        .dataInvite{
-            width: 100%;
-        }
-        .inputInvite{
-            width: 350px;
-        }
-        .shadowme{
-            box-shadow: 2px 2px 10px ;
-        }
-        
-.socialbtn
-{
-    border: none;
-    background: transparent;
-    font-size: 2em;
-    margin: 15px;
-    cursor: pointer;
-    transition: 0.2s;
-    
+body{
+    overflow-x: hidden;
+    background: linear-gradient(salmon, #78ffd6);
 }
-
+.socialbtn{
+       text-decoration: none;
+       color: black;
+}
 .socialbtn:hover{
-    color: #37A079;
+    color: dodgerblue;
+    cursor: pointer;
 }
-    
-.socialrow
+.btn-primary
 {
-    text-align: center;
+    font-family: 'Amaranth', sans-serif;
+    background: #000;
+    border: #000;
+}
+h1{
+    font-size: 4em;
+    font-family: 'play', cursive;
+    color: #76BAA1;
+    text-shadow: 1px 2px 5px;
 }
 
-    </style>
+.headingmain
+{
+    font-family: 'Righteous', cursive;
+    color: #000;
+    font-size: 100px;
+}    
+
+.subheadingmain
+{
+    font-family: 'Cookie', cursive;
+    font-size: 35px;
+}
+.btn-danger
+{
+    font-family: 'Amaranth', sans-serif;
+}
+
+
+#inviteBody{
+    min-height: 700px;
+    width: 350px;
+    margin:auto;
+    background: cover;
+    font-family: 'Dancing Script', cursive;
+    background-color: black;
+    background: url('{{ greetings[0].bg }}');
+    /* background-size: 350px 700px; */
+    background-repeat: no-repeat;
+    background-size:100% 100% ;
+    padding-top: 350px;
+     
+}   
+#inviteBody{
+    box-shadow: 0px 2px 10px black;
+    margin-bottom: 20px;
+}
+#bgInvite{
+    width: 350px;
+    position: absolute;
+    padding: 0;
+    margin-top: 0;
+    z-index: 1;
+    display: none;
+}
+.dataInvite{
+    width: 100%;
+}
+
+.inputInvite{
+        width: 350px;
+        z-index: 9;
+        color: #fff;
+        text-shadow: 0 2px 5px black;
+        -webkit-text-stroke-width: .5px;
+        -webkit-text-stroke-color: black;
+    }
+    .inputInvite::-webkit-scrollbar {
+        width: 5px;
+    }
+    .inputInvite::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+    .inputInvite::-webkit-scrollbar-thumb {
+        background: salmon;
+    }
+    .inputInvite:hover{
+        background: transparent;
+    }
+    .inputInvite:focus{
+        background: transparent;
+    }
+    
+.search-input {
+font-family:'play';
+
+}
+.search-input,
+.leaflet-control-search {
+    max-width:450px;
+    background: black;
+    padding:5px;
+}
+
+@media(max-width:522px)
+{
+        
+    .headingmain
+    {
+        font-size: 50px;
+    }    
+    .subheadingmain
+    {
+        font-size: 25px;
+    }
+
+}
+
+</style>
 </head>
 <body>
-    
-<div class="container">
-    <div class="row">
-        <div class="col-12 text-center">
-            <input type="button" value="MeelIndia" onclick="window.location='/'" class="btn btn-primary m-2">
-            <input type="button" value="Profile" onclick="window.location='/profileUser'"class="btn btn-primary m-2">
-        </div>
-    </div>
+<div class="containetr">
+   
     <div class="col-md-6 offset-md-3 pb-5">
         <div class="row">
             @each(dt in greetings)
             <div class="col-md-12 mt-5">
-                <div class="col-md-8 offset-md-2 mb-2 text-center">
-                    <div class="d-flex justify-content-center">
-                        <input type="text" id="title" name="title" class="form-control ytedit d-inline inputInvite text-center " value="https://meelindia.com/greeting?id={{dt._id}}" placeholder="">  
-                    </div> 
-                    
-                    <div class="d-flex justify-content-center">
-                        <a class="socialbtn d-flex row" href="whatsapp://send?text=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                        <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
-                        <a class="socialbtn d-flex row" onclick='myFunction2("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
-                        <a class="socialbtn d-flex row text-primary" onclick="doCapture();" > <i class="fa fa-download" aria-hidden="true"></i></a>
-                </div>
-                </div> 
-            
-                <div class="invite bg-light shadowme" id="inviteBody">
-                    <img src="{{dt.bg}}" id="bgInvite" alt="">
+              
+                <div class="invite shadowme" id="inviteBody">
+                    {{--  <img src="{{dt.bg}}" id="bgInvite" alt="">  --}}
                     <div class="dataInvite">
-                        <h4 class="col-12 Caveat inputInvite text-center" style="font-family:{{ dt.nameFont}}">{{ dt.title }}</h4>
-                        <h5 class="col-12  Caveat inputInvite text-center" style="font-family:{{ dt.subFont}}">{{ dt.subtitle }}</h5>
-                        <p class="col-12 Caveat inputInvite text-center" style="font-family:{{ dt.bodyFont}}">{{ dt.content}} </p>
+                        <h4 class="col-12 Caveat inputInvite text-center" style="font-family:{{ dt.nameFont}}; font-size:2.5em;"> {{ dt.title }}</h4>
+                        <p class="col-12 Caveat inputInvite text-center" style="font-family:{{ dt.bodyFont}}; font-size:1.5em;">{{ dt.content}} </p>
                     </div>
                 </div> 
-                    
-              
-            </div>
+                <div class="col-md-8 offset-md-2 mb-2 text-center">
+                    <a class="socialbtn h1 col-12 m-2 display-1" onclick="doCapture();" > <i class="fa fa-download" aria-hidden="true"></i></a>
+                </div> 
+                
+        </div>
+             
             @endeach
-            <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-4 mb-5 btn-block" onclick="window.location='SignUpUser'">
+            <input type="button" value="MeelIndia Home" class="btn btn-danger mt-2 mb-1 col-md-5" onclick="window.location='profileUser'">
+            <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-2 mb-1 col-md-5 offset-md-2" onclick="window.location='SignUpUser'">
+            <br> <br>
+            
+
         </div>
     </div>
 </div>
 
 <script>
-        function myFunction2(str) {
+
+    function myFunction(str) {
             var copyText = 'https://meelindia.com/greeting?id='+str;
             navigator.clipboard.writeText(copyText);
-            alert("Link Copied Successfully");
+            alert("Copied the text: " + copyText);
         }
-</script>
+        var doc = new jsPDF();
+        var specialElementHandlers = {
+            '#editor': function (element, renderer) {
+                return true;
+            }
+        };
+
+        </script>
+
 </body>
 </html>
