--- a/views/index.edge
+++ b/views/index.edge
@@ -39,27 +39,27 @@ crossorigin="anonymous">
         <h3 class="text-center">INVITATIONS!</h3>
         
         <p class="text-center">We have the wide range of invitation templates, this includes</p>
-       <div class="row row mt-2 pr-3 pl-3">
-        <div class="col-md-2 col-6 offset-md-1">
-          <img class="mb-2" src="./example/birthday.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Birthday" onclick="window.location='invitationCreate?type=birthday'">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2 mt-3" src="./example/engangement.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Engagement" onclick="window.location='invitationCreate?type=engagement'">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2" src="./example/wedding.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Wedding" onclick="window.location='invitationCreate?type=wedding'">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2" src="./example/anniversary.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Anniversary" onclick="window.location='invitationCreate?type=anniversary'">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2" src="./example/innogration.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Inaugration " onclick="window.location='invitationCreate?type=innogration'">
-        </div>
+       <div class="row row mt-2 pr-3 pl-3 pb-5">
+          <div class="col-md-2 offset-md-1 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/birthday.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Birthday" onclick="window.location='invitationCreate?type=birthday'">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/engangement.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Engagement" onclick="window.location='invitationCreate?type=engagement'">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/wedding.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Wedding" onclick="window.location='invitationCreate?type=wedding'">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/anniversary.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Anniversary" onclick="window.location='invitationCreate?type=anniversary'">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/innogration.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Inaugration " onclick="window.location='invitationCreate?type=innogration'">
+          </div>
         
        </div>
        <div class="row mt-5 pt-5">
@@ -67,8 +67,8 @@ crossorigin="anonymous">
             <img src="./icons/gif.gif" width="60%" alt="">
         </div>
         <div class="col-md-6 pt-5 text-center">
-            <h1 class=" display-4 text-light mt-4 shadowme-text">Upload Your Own <br> Invitation.</h1>
-            <input type="button" class="btn btn-light shadowme btn-lg mt-3 btn-block" onclick="window.location='invitationCreateCustom'" value="Create">
+            <h1 class="display-4 text-light mt-4 shadowme-text">Upload Your Own <br> Invitation.</h1>
+            <input type="button" class="btn btn-light shadowme btn-lg mt-3 btn-block col-10 offset-1" onclick="window.location='invitationCreateCustom'" value="Create">
         </div>
     </div>
       </div>
@@ -77,17 +77,17 @@ crossorigin="anonymous">
   </div>
 </section>
 
-<div class="slide hi-slide col-md-6 offset-md-3" >
-  <h1 class="text-center">We have a wide variety of Cards for you to explore!</h1>
-  <ul class="">
-    <li><img src="./example/engangement.svg" alt="Img 1" /></li>
-    <li><img src="./example/anniversary.svg" alt="Img 2" /></li>
-    <li><img src="./example/innogration.svg" alt="Img 3" /></li>
-    <li><img src="./example/birthday.svg" alt="Img 4" /></li>
-    <li><img src="./example/wedding.svg" alt="Img 5" /></li>
-    <li><img src="./example/birthday.svg" alt="Img 6" /></li>
-    <li><img src="./example/anniversary.svg" alt="Img 7" /></li>
-    <li><img src="./example/engangement.svg" alt="Img 7" /></li>
+<div class="slide hi-slide col-md-6 offset-md-3 pb-5" >
+  <h1 class="text-center mb-5">We have a wide variety of Cards for you to explore!</h1>
+  <ul class="col-md-12">
+    <li><img src="./example/engangement.png" alt="Img 1" /></li>
+    <li><img src="./example/anniversary.png" alt="Img 2" /></li>
+    <li><img src="./example/innogration.png" alt="Img 3" /></li>
+    <li><img src="./example/birthday.png" alt="Img 4" /></li>
+    <li><img src="./example/wedding.png" alt="Img 5" /></li>
+    <li><img src="./example/birthday.png" alt="Img 6" /></li>
+    <li><img src="./example/anniversary.png" alt="Img 7" /></li>
+    <li><img src="./example/engangement.png" alt="Img 7" /></li>
   </ul>
 </div>
   
@@ -106,26 +106,27 @@ crossorigin="anonymous">
         
         <p class="text-center">We have the wide range of greeting templates, this includes</p>
        <div class="row mt-2 pr-3 pl-3">
-        <div class="col-md-2 col-6 mt-2 offset-md-1">
-          <img class="mb-2" src="./example/birthday.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Birthday">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2 mt-3" src="./example/engangement.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Engagement">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2" src="./example/wedding.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Wedding">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2" src="./example/anniversary.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Anniversary">
-        </div>
-        <div class="col-md-2 col-6 mt-2">
-          <img class="mb-2" src="./example/innogration.svg" width="100%" alt=" "/>
-          <input type="button" class="btn btn-outline-light pr-5 pl-5 btn-block ml-1" value="Inaugration ">
-        </div>
+
+          <div class="col-md-2 col-4 mt-2 offset-md-1">
+            <img class="mb-2 shadowme" src="./example/greetingBirthday.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Birthday">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/greetingEngangement.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block ml-1" value="Engagement">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/greetingWedding.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Wedding">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/greetingAnniversary.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Anniversary">
+          </div>
+          <div class="col-md-2 col-4 mt-2">
+            <img class="mb-2 shadowme" src="./example/greetingInaugration.png" width="100%" alt=" "/>
+            <input type="button" class="btn btn-outline-light btn-block" value="Inaugration ">
+          </div>
         
        </div>
        <div class="row mt-5 pt-5">
@@ -134,7 +135,7 @@ crossorigin="anonymous">
         </div>
         <div class="col-md-6 pt-5 text-center">
             <h1 class=" display-4 text-light mt-4 shadowme-text">Upload Your Own <br> Greeting.</h1>
-            <input type="button" class="btn btn-light shadowme btn-lg mt-3 btn-block" value="Create">
+            <input type="button" class="btn btn-light shadowme btn-lg mt-3 btn-block col-10 offset-1" value="Create">
         </div>
     </div>
       </div>
@@ -241,20 +242,19 @@ crossorigin="anonymous">
   </section>
     
 </main>
-<header style="background: #f0f0f0;">
-  <div class="container text-center">
-      <div class="row">
-        <div class="col-md-5 col-sm-12 ">
-          <img src="./icons/event.png"  width="90%" style="margin-top:30vh"  alt="Book" />
+<header >
+  <div class="container text-center pt-5 pb-5">
+      <div class="row" style="min-height:80vh; align-items:center;">
+        <div class="col-md-6 col-sm-12 ">
+          <img src="./icons/all.png"  width="100%" height="auto"   alt="Book" />
         </div>
-        <div class="col-md-7 col-sm-12 ">
+        <div class="col-md-6 col-sm-12 text-dark ">
           <h4>About</h4>
           <h1>MEELINDIA</h1>
-          <p style="padding-top: 2em;">
+          <p style="padding-top: 2em;" class="text-justify">
             Meelindia is the first ever initiative started by preneurs group which will help you generating unique kind of digital cards. Our aim is to make creating and sending invitations as well as greetings easier than before. This will benefit to both the event organizer as well as guest. It will also save time of guests in getting the event location. This will save lots of paper and trees.
             Our ambition is to make things digital one by one. This is initiated under innovation and incubation, digital India and also make in India.
             We also have some value added services according to need of customers.
-
           </p>
         </div>
       
