--- a/views/invitationCustom.edge
+++ b/views/invitationCustom.edge
@@ -136,15 +136,17 @@ img{
         <div class="row">
             @each(dt in invitations)
             <div class="col-md-12 mt-5">
-                <img src="{{dt.image}}" width="100%" alt="">
+                <div class="col-12 text-center">
+                    <img src="{{dt.image}}" width="350px" id="imgInvite" alt="">
+                </div>
                 <div class="col-md-8 offset-md-2 mb-2 text-center">
                     <div class="d-flex justify-content-center">
                             <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-success" m-2 value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
                    
-                            <a class="socialbtn h1 d-flex  m-2" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                            <a class="socialbtn h1 d-flex  m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                            {{--  <a class="socialbtn h1 d-flex  m-2" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>   --}}
+                            {{--  <a class="socialbtn h1 d-flex  m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>   --}}
                             <!-- <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>  -->
-                            <a class="socialbtn h1 d-flex  m-2" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
+                            {{--  <a class="socialbtn h1 d-flex  m-2" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>  --}}
                             <a class="socialbtn h1 d-flex  m-2" href="{{dt.image}}" download> <i class="fa fa-download" aria-hidden="true"></i></a>
                           
                     </div>
@@ -164,18 +166,6 @@ img{
 
 <script>
 
- //   addEventListener('load', async ()=>{
- //       let sw = await navigator.serviceWorker.register('./sw.js');
- //       console.log(sw);
- //   })
- //   async function suscribe() {
- //       let sw = await navigator.serviceWorker.ready;
- //       let push = await sw.pushManager.subscribe({
- //           userVisibleOnly:true,
- //           applicationServerKey: "Todo!!"
- //       })
- //       console.log(JSON.stringify(push))
- //   }
 
     function myFunction(str) {
             var copyText = 'https://meelindia.com/invitationCustom?id='+str;
@@ -189,11 +179,7 @@ img{
             }
         };
 
-        function dateTimeFormat(){
-            fullDate = '{{ invitations[0].dateTime }}';
-            dateArray = fullDate.split("T");
-            document.getElementById('dateTime').innerHTML = dateArray[0] + "<br> Start At " + dateArray[1] +"<br><br>";
-        }dateTimeFormat();
+       
         </script>
 
 </body>
